# winthrop-client-python

./: .gitignore  .gitlab-ci.yml  .openapi-generator-ignore  .travis.yml  README.md  git_push.sh  pyproject.toml  setup.py  tox.ini
.openapi-generator/: FILES
docs/: AccountBillingAddress.md  AccountDetail.md  AccountInfo.md  AccountInvoice.md  AccountSubscription.md  AccountUser.md  AccountUsersResponse.md  AdminCompensationSubdivision.md  AdminMeta.md  AdminMetaCompStats.md  Administrator.md  AdministratorCollection.md  AdministratorSearchResultCollection.md  AsstCoachEntry.md  AsstCoachSchool.md  AthleticProfileShow.md  AthleticProfileShowContactsInner.md  AthleticProfileShowDealsInner.md  AthleticProfileShowDealsInnerVendorsInner.md  AthleticProfileShowFinancialInfo.md  AthleticProfileShowFinancials.md  AthleticProfileShowFinancialsRevenuesInner.md  AthleticProfileShowGamesInner.md  AthleticProfileShowGuaranteesInner.md  AthleticProfileShowPermissions.md  AthleticProfileShowPersonnelInner.md  AthleticProfileShowSchool.md  AthleticProfileShowSportsOverviewInner.md  AthleticProfileShowTabSportsInner.md  AuditedFinancialReportStatus.md  AuditedFinancialReportStatusCollection.md  AvailableGameContract.md  Avatar.md  AverageCompensation.md  BatchGuaranteeEconomicsRequest.md  BulkCreateGamePostSearchesRequest.md  BulkCreateGamePostSearchesRequestIntentsInner.md  BulkCreateGamePostSearchesRequestPostsInner.md  BulkCreateGames201Response.md  BulkCreateGames422Response.md  (+518 more)
test/: test_account_billing_address.py  test_account_detail.py  test_account_info.py  test_admin_meta.py  (+557 more)
(+571 files in other folders)
